syntax = "proto3";

package user;

option go_package = "github.com/lk2023060901/xdooria/examples/grpc/proto/user";

// UserService 用户服务
service UserService {
  // CreateUser 创建用户
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}

  // GetUser 获取用户
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

// CreateUserRequest 创建用户请求
message CreateUserRequest {
  string username = 1;  // 用户名
  string email = 2;     // 邮箱
  int32 age = 3;        // 年龄
}

// CreateUserResponse 创建用户响应
message CreateUserResponse {
  int64 user_id = 1;
  string message = 2;
}

// GetUserRequest 获取用户请求
message GetUserRequest {
  int64 user_id = 1;
}

// GetUserResponse 获取用户响应
message GetUserResponse {
  int64 user_id = 1;
  string username = 2;
  string email = 3;
  int32 age = 4;
}
